Made site responsive
Responsive

--- a/index.html
+++ b/index.html
@@ -32,60 +32,84 @@
             </div>
         </section>
 
-        <section id="together">
+        <section id="callouts" class="content-grid">
+            <div>
+                <ul>
+                    <li>For Ben's parents who stand by him every day at CHOP</li>
+                    <li>For Jamie, whose mom works doubles to help pay for treatment</li>
+                    <li>For Allison, as she hopes for a kidney transplant</li>
+                    <li>For Ciarlo, who carries his crutches with smiles and spunk</li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="together" class="content-grid">
             <article>
                 <h1>BECAUSE TOGETHER, WE FLY.</h1>
                 <img src="img/together/children.svg" alt="Five children waving">
             </article>
             <aside>
                 <h2>100%</h2>
-                <p>of your donation will go towards giving hope and financial security to young patients of CHOP and their families.</p>
-                <a href="#" class="link">LEARN MORE</a>
+                <div>
+                    <p>of your donation will go towards giving hope and financial security to young patients of CHOP and their families.</p>
+                    <a href="#" class="link">LEARN MORE</a>
+                </div>
             </aside>
         </section>
 
         <section id="totals">
             <div>
-                <h1>THIS YEAR'S TOTALS</h1>
-                <div id="tan-bg">
-                    <div id="bg-fill"></div>
+                <div>
+                    <h1>THIS YEAR'S TOTALS</h1>
+                    <div class="tan-bg">
+                        <div></div>
+                    </div>
+                    <h6>$1,905.43 of $20,000 goal</h6>
                 </div>
-                <h6>$1,905.43 of $20,000 goal</h6>
+                <aside>
+                    <a href="#" class="link">SHARE</a>
+                    <a href="#" class="button">DONATE</a>
+                </aside>
             </div>
-            <aside>
-                <a href="#" class="link">SHARE</a>
-                <a href="#" class="button">DONATE</a>
-            </aside>
         </section>
 
         <section id="identity">
-            <ul>
-                <li id="dancer">
-                    <p>I am a</p>
-                    <h4>DANCER</h4>
-                </li>
-                <li>
-                    <p>I am a</p>
-                    <h4>DONOR</h4>
-                </li>
-                <li>
-                    <p>I am a</p>
-                    <h4>HEALER</h4>
-                </li>
-                <li>
-                    <p>I am a</p>
-                    <h4>FIGHTER</h4>
-                </li>
-            </ul>
-        </section>
-
-        <section id="gallery" class="content-grid">
             <div>
                 <ul>
-                    <li><img src="img/gallery/mission.jpg" alt="The Mission of Fly"></li>
-                    <li><img src="img/gallery/kid1.jpg" alt="Child's story"></li>
-                    <li><img src="img/gallery/kid2.jpg" alt="Child's story"></li>
-                    <li><img src="img/gallery/kid3.jpg" alt="Child's story"></li>
+                    <li id="dancer">
+                        <p>I am a</p>
+                        <h4>DANCER</h4>
+                    </li>
+                    <li>
+                        <p>I am a</p>
+                        <h4>DONOR</h4>
+                    </li>
+                    <li>
+                        <p>I am a</p>
+                        <h4>HEALER</h4>
+                    </li>
+                    <li>
+                        <p>I am a</p>
+                        <h4>FIGHTER</h4>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="hero2">
+            <div>
+                <h1>We fly with you and for you.</h1>
+            </div>
+        </section>
+
+        <section id="gallery">
+            <div>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </ul>
             </div>
         </section>
@@ -111,13 +135,19 @@
         </section>
 
         <section id="contact">
-            <h1>TALK TO US</h1>
             <div>
-                <p>Name</p>
-                <p>Email</p>
-                <div></div>
-                <a href="#" class="button">SEND</a>
+                <h1>TALK TO US</h1>
+                <div>
+                    <p>Name</p>
+                    <p>Email</p>
+                    <div></div>
+                    <a href="#" class="button">SEND</a>
+                </div>
             </div>
+        </section>
+
+        <section id="hero3">
+            <div></div>
         </section>
 
 
