--- a/index.html
+++ b/index.html
@@ -44,17 +44,19 @@
         </section>
 
         <section id="together" class="content-grid">
-            <article>
-                <h1>BECAUSE TOGETHER, WE FLY.</h1>
-                <img src="img/together/children.svg" alt="Five children waving">
-            </article>
-            <aside>
-                <h2>100%</h2>
-                <div>
-                    <p>of your donation will go towards giving hope and financial security to young patients of CHOP and their families.</p>
-                    <a href="#" class="link">LEARN MORE</a>
-                </div>
-            </aside>
+            <div>
+                <article>
+                    <h1>BECAUSE TOGETHER, WE FLY.</h1>
+                    <img src="img/together/children.svg" alt="Five children waving">
+                </article>
+                <aside>
+                    <h2>100%</h2>
+                    <div>
+                        <p>of your donation will go towards giving hope and financial security to young patients of CHOP and their families.</p>
+                        <a href="#" class="link">LEARN MORE</a>
+                    </div>
+                </aside>
+            </div>
         </section>
 
         <section id="totals">
@@ -119,15 +121,15 @@
                 <h1>UPCOMING EVENTS</h1>
                 <ul>
                     <li>
-                        <p>info session <br>sept 24 <br>2pm – 4pm <br>race lawn</p>
+                        <p><span>info session</span><br>sept 24 <br>2pm – 4pm <br>race lawn</p>
                         <a href="#" class="button">REMIND ME</a>
                     </li>
                     <li>
-                        <p>donation day <br>nov 8 <br>7am – 11pm <br>drexel's campus</p>
+                        <p><span>donation day</span><br>nov 8 <br>7am – 11pm <br>drexel's campus</p>
                         <a href="#" class="button">DONATE</a>
                     </li>
                     <li>
-                        <p>dance marathon <br>may 12 <br>5pm – 10pm <br>drexel armory</p>
+                        <p><span>dance marathon</span><br>may 12 <br>5pm – 10pm <br>drexel armory</p>
                         <a href="#" class="button">REGISTER</a>
                     </li>
                 </ul>
